fix firefox be stupid. wrap menu with elipsis

--- a/assets/scss/forderung.scss
+++ b/assets/scss/forderung.scss
@@ -73,9 +73,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    // width: 100vw !important;
+    width: auto !important;
     height: fit-content;
     margin: 0;
+    font-size: 1.5rem;
     // padding: 0 1rem;
     color: white;
     hyphens: auto;
@@ -110,6 +111,9 @@
     // transform: scale(0.8);
     opacity: 0.5;
     transform: translateX(-33vw);
+    white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
 }
 
 .mo-original {
